--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ certifi==2024.8.30 ; python_version >= "3.10" and python_version < "3.15"
 colorama==0.4.6 ; python_version >= "3.10" and python_version < "3.15" and sys_platform == "win32"
 colorlog==6.8.2 ; python_version >= "3.10" and python_version < "3.15"
 frozenlist==1.5.0 ; python_version >= "3.10" and python_version < "3.15"
+google-colab ; python_version >= "3.10" and sys_platform == "linux"
 idna==3.10 ; python_version >= "3.10" and python_version < "3.15"
 magic-filter==1.0.12 ; python_version >= "3.10" and python_version < "3.15"
 multidict==6.1.0 ; python_version >= "3.10" and python_version < "3.15"
